app/assets/stylesheets/partials/_shared_panel_login_signup_styles.sass
@import 'variables'
$panel-border-radius: 8px

.panel
  width: 315px
  margin: 0 auto
  border-radius: $panel-border-radius
  border-color: #c8c8c8

  .panel-heading
    background-color: white
    border-top-left-radius: $panel-border-radius - 1
    border-top-right-radius: $panel-border-radius - 1

  .panel-footer
    border-bottom-left-radius: $panel-border-radius - 1px
    border-bottom-right-radius: $panel-border-radius - 1px
    line-height: 50px

  .panel-title
    color: $heading-color
    font-size: 21px
    font-weight: bold
    text-transform: uppercase
    line-height: 50px
    text-align: center

  .panel-body
    padding: 21px 21px 35px

.form-header
  font-weight: 600 //semibold
  text-transform: uppercase
  margin-bottom: 30px

.btn.btn-warning
  float: right
  width: 100px
  text-transform: uppercase

